samples/_failures_safe/1761532899_1e2363_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d75e5ee1.c: In function ‘main’:
./samples/SAFE/__tmp_d75e5ee1.c:157:5: error: expected expression at end of input
  157 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_d75e5ee1.c:157:5: error: expected declaration or statement at end of input
